@@ -9,33 +9,68 @@ group = 'com.crud'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
+
+configurations {
+	compileOnly {
+		extendsFrom annotationProcessor
+	}
+}
+
 repositories {
 	mavenCentral()
 }
 
 dependencies {
-//	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-//	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
-//	implementation 'org.springframework.boot:spring-boot-starter-validation'
-//	compile 'mysql:mysql-connector-java'
-//	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-
-	compile 'org.springframework.boot:spring-boot-starter-web'
-	compile 'org.projectlombok:lombok'
-	compile 'org.springframework.boot:spring-boot-starter-data-jpa'
-//	compile 'mysql:mysql-connector-java'
-	testCompile'org.springframework.boot:spring-boot-starter-test'
-    compile'org.postgresql:postgresql'
-
-//	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
-//			{
-//		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-//	}
-
+	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
-
+	testImplementation('org.springframework.boot:spring-boot-starter-test') {
+		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+	}
 }
 
 test {
 	useJUnitPlatform()
 }
+
+//tasks.withType(Test) {
+//	useJUnitPlatform()
+//	jvmArgs '--enable-preview'
+//}
+
+//repositories {
+//	mavenCentral()
+//}
+//
+//dependencies {
+////	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+////	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+////	implementation 'org.springframework.boot:spring-boot-starter-validation'
+////	compile 'mysql:mysql-connector-java'
+////	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+//
+//	compile 'org.springframework.boot:spring-boot-starter-web'
+//	compile 'org.projectlombok:lombok'
+//	compile 'org.springframework.boot:spring-boot-starter-data-jpa'
+//	compile 'mysql:mysql-connector-java'
+//	testCompile'org.springframework.boot:spring-boot-starter-test'
+////    compile'org.postgresql:postgresql'
+//
+////	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+////			{
+////		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+////	}
+//
+//	annotationProcessor 'org.projectlombok:lombok'
+//
+//	testImplementation("io.mockk:mockk:1.8.5") {
+//		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+//	}
+//
+//}
+//
+//test {
+//	useJUnitPlatform()
+//}
